--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2>Learn Greek with Odyssey – Create Your Own Story. Learn Greek Naturally.
           Learn Greek with Odyssey makes learning Greek easy and fun by letting you create your own personalized stories.
           </h2>
-        <img src="https://diepchilykieu.github.io/Greekwithrex/appIconthumb.png" alt="Learn Greek with Odyssey Screenshot"
+        <img src="https://diepchilykieu.github.io/learngreek/GreekIcon.png" alt="Learn Greek with Odyssey Screenshot"
             style="display: block; margin: 0 auto; max-width: 100%; margin-bottom: 20px;">
         <h2>Choose a character, pick a scene, and generate a short Greek story that’s made just for you. Every day, you can create new stories based on your age and learning level — with simple grammar, useful vocabulary, and everyday language.</h2>
         <div style="text-align: center;">
